--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
 	<title>Meital Apini</title>
-	<link rel="stylesheet" type="text/css" href="Msite.css">
+	<link rel="stylesheet" type="text/css" href="MSite.css">
 </head>
 
 <body>
